<resources>
    <string name="app_name">Viander</string>
    <string name="login">Ingresar</string>
    <string name="enter_password">Contraseña</string>
    <string name="enter_your_username">Usuario</string>
    <string name="confirmation">Confirmación</string>
    <string name="configuration">Configuración</string>
    <string name="viands_recommendation">Recomendación de Viandas</string>
    <string name="menu_recommendation">Obtener menú</string>
    <string name="logout">Salir</string>
    <string name="logout_question">¿Seguro que desea cerrar sesión?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="user">Usuario:</string>
    <string name="close_session">Cerrar sesión</string>

    <string name="logo">Logo Viander</string>
    <string name="google_login">INGRESAR CON GOOGLE</string>

    <string name="welcome">Bienvenid@</string>

    <string name="enter_fields_login">Debe ingresar usuario y contraseña</string>
    <string name="coming_soon">Próximamente!</string>
    <string name="invalid_credentials">Credenciales inválidas</string>

    <string name="confirmation_image">Pedido confirmado</string>
    <string name="confirmation_title">Su pedido fue realizado con éxito!</string>
    <string name="confirmation_mail_message">Se le enviará un correo electrónico con la confirmación.</string>
    <string name="confirmation_total_amount_message">El total a abonar es $</string>
    <string name="confirmation_thanks_message">Gracias por preferirnos!</string>

    <string name="back_to_home">Volver al inicio</string>

    <string name="channel_name">viander_channel</string>
    <string name="channel_description">viander</string>
    <string name="channel_id">viander</string>
    <string name="selected_viand">Vianda seleccionada</string>
    <string name="price_coin_synbol">Precio: $</string>
    <string name="menu_price_message">Total a pagar: $</string>

    <string name="request_state">Estado del pedido</string>
    <string name="request_confirm">Su pedido ha sido confirmado</string>

    <string name="enter">Ingresar</string>
    <string name="categories">Categorías</string>
    <string name="celiac">Celíaco</string>
    <string name="diabetic">Diabético</string>
    <string name="vegan">Vegano</string>

    <string name="weekly_days">Días semanales</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>

    <string name="reset_btn">Limpiar</string>
    <string name="change">Cambiar</string>
    <string name="not_selected_viands">No hay viandas seleccionadas</string>
    <string name="updated_viands">Viandas actualizadas</string>
    <string name="updated_viands_count">contadores de viandas actualizados</string>
    <string name="confirm">Confirmar</string>
    <string name="chip">Excluye un ingrediente</string>
    <string name="configuration_updated">Configuración actualizada</string>
    <string name="no_configuration_days">Para obtener un menú, debe configurar los días requeridos.</string>
    <string name="no_results">Lamentamos que no hubo resultados para sus preferencias. Puede intentar cambiar su configuración.</string>
    <string name="chips_max_count">Ha alcanzado el máximo de elementos</string>

    <string name="error_login">Error en login:</string>
    <string name="error_logout">Error en logout:</string>
    <string name="error_user_not_found">Usuario no encontrado</string>
    <string name="error_get_user">Error al obtener usuario:</string>
    <string name="error_update_counts">Error al actualizar contadores</string>
    <string name="error_get_counts">Error al obtener contadores</string>
    <string name="error_profile_update">Error al actualizar perfil:</string>
    <string name="error_get_profile">Error al obtener perfil:</string>
    <string name="error_get_post">Error al obtener post:</string>
    <string name="error_get_random_post">Error al obtener random posts:</string>
    <string name="error_change_random_post">Error al cambiar random posts:</string>

    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="content_description">Content description</string>
    <string name="description">Descripción</string>
    <string name="close">cerrar</string>
    <string name="back">volver</string>
    <string name="configure">configurar</string>
    <string name="ok">ok</string>
    <string name="cancel">cancelar</string>
    <string name="change_viand">Cambiar vianda</string>
    
    <string name="most_requested">Las más pedidas</string>
    <string name="createdby">Creado por</string>
    <string name="canelones_de_carne">Canelones de carne</string>

    <string name="titulo_acerca_de">Acerca de</string>
    <string name="msg_acerca_de">Viander 2021</string>
    <string name="version">Versión</string>

</resources>