<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_weight="0"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="41dp"
                android:layout_marginLeft="41dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:shadowColor="#0270E4"
                android:text="@string/categories"
                android:textColor="#03A9F4"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/no_salt"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/no_sugar"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/no_gluten"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/no_meat"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox4"
                android:layout_marginStart="39dp"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:fontFamily="sans-serif-medium"
                android:shadowColor="#2B2B2B"
                android:text="@string/weekly_days"
                android:textColor="#03A9F4"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/sunday" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox6"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/checkbox8"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox7"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/checkbox9"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox8"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/checkbox10"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox9"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/friday" />

            <CheckBox
                android:id="@+id/checkbox11"
                android:layout_width="231dp"
                android:layout_height="45dp"
                android:layout_below="@+id/checkbox10"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="126dp"
                android:layout_marginLeft="126dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:text="@string/saturday" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="0">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_rounded"
                android:text="@string/reset_btn"
                android:textColor="#ffffff" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="false"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_rounded"
                android:text="@string/confirm"
                android:textColor="#ffffffff" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>