<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    tools:context=".HomeActivity">

    <!--Textview for displaying
        user's email address-->

    <TextView
        android:id="@+id/idTVWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/idPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVWelcome"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/idBtnConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idPost"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/configuration" />

    <Button
        android:id="@+id/idBtnConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idBtnConfiguration"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/confirmation" />

    <!--button for logging out of the app-->
    <Button
        android:id="@+id/idBtnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idBtnConfirmation"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/logout" />

            <LinearLayout
                android:layout_below="@id/idBtnLogout"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/recipient_label_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/recipient_group_FL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:flexWrap="wrap"
                    app:showDivider="beginning|middle|end">

                    <EditText
                        android:id="@+id/recipient_input_ET"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        app:layout_flexGrow="1"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:hint="Ingresar"/>

                </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

</RelativeLayout>